# swc-plugin-react-css-modules

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
src/: auto_map_css_module.rs  config.rs  lib.rs  process_stylesheet.rs
src/generic_names/: mod.rs
src/js/: getClassName.ts
src/loader_utils/: hash.rs  interpolate.rs  mod.rs
tests/: fixture.rs
tests/fixture/basic-jsx/: input.jsx
tests/fixture/classname-expr/: input.jsx  output.jsx
tests/fixture/simple-stylename/: config.json  input.jsx  output.jsx  styles.css
tests/fixture/stylename-expr/: input.jsx  output.jsx  styles.css
